improve hotel booking search feature